--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "livraria-alura",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon server.js"
   },
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
